Fixing some stability stuff

--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,6 @@
   "homepage" : "https://github.com/olect/TorCurl",
   "require-dev": {
     "phpunit/phpunit": "^5.7"
-  }
+  },
+  "prefer-stable": true
 }
